--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: waaaliceee bioinformatics
+name: Waaaliceee Bioinformatics
 
 # Short bio or description (displayed in the header)
-description: "one step at a time"
+description: "One Step at a Time"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
